fix colors on safari

--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,54 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: #F4F8F8;
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+    font-family: 'Roboto Flex Variable';
+    font-style: oblique 0deg 10deg;
+    font-display: block;
+    font-weight: 100 1000;
+    font-stretch: 25% 151%;
+    src: url(https://cdn.jsdelivr.net/fontsource/fonts/roboto-flex:vf@latest/cyrillic-ext-full-normal.woff2) format('woff2-variations');
+    unicode-range: U+0460-052F,U+1C80-1C88,U+20B4,U+2DE0-2DFF,U+A640-A69F,U+FE2E-FE2F;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+@font-face {
+    font-family: 'Roboto Flex Variable';
+    font-style: oblique 0deg 10deg;
+    font-display: block;
+    font-weight: 100 1000;
+    font-stretch: 25% 151%;
+    src: url(https://cdn.jsdelivr.net/fontsource/fonts/roboto-flex:vf@latest/cyrillic-full-normal.woff2) format('woff2-variations');
+    unicode-range: U+0301,U+0400-045F,U+0490-0491,U+04B0-04B1,U+2116;
 }
-a:hover {
-  color: #535bf2;
+@font-face {
+    font-family: 'Roboto Flex Variable';
+    font-style: oblique 0deg 10deg;
+    font-display: block;
+    font-weight: 100 1000;
+    font-stretch: 25% 151%;
+    src: url(https://cdn.jsdelivr.net/fontsource/fonts/roboto-flex:vf@latest/greek-full-normal.woff2) format('woff2-variations');
+    unicode-range: U+0370-0377,U+037A-037F,U+0384-038A,U+038C,U+038E-03A1,U+03A3-03FF;
 }
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+@font-face {
+    font-family: 'Roboto Flex Variable';
+    font-style: oblique 0deg 10deg;
+    font-display: block;
+    font-weight: 100 1000;
+    font-stretch: 25% 151%;
+    src: url(https://cdn.jsdelivr.net/fontsource/fonts/roboto-flex:vf@latest/vietnamese-full-normal.woff2) format('woff2-variations');
+    unicode-range: U+0102-0103,U+0110-0111,U+0128-0129,U+0168-0169,U+01A0-01A1,U+01AF-01B0,U+0300-0301,U+0303-0304,U+0308-0309,U+0323,U+0329,U+1EA0-1EF9,U+20AB;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+@font-face {
+    font-family: 'Roboto Flex Variable';
+    font-style: oblique 0deg 10deg;
+    font-display: block;
+    font-weight: 100 1000;
+    font-stretch: 25% 151%;
+    src: url(https://cdn.jsdelivr.net/fontsource/fonts/roboto-flex:vf@latest/latin-ext-full-normal.woff2) format('woff2-variations');
+    unicode-range: U+0100-02AF,U+0304,U+0308,U+0329,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+@font-face {
+    font-family: 'Roboto Flex Variable';
+    font-style: oblique 0deg 10deg;
+    font-display: block;
+    font-weight: 100 1000;
+    font-stretch: 25% 151%;
+    src: url(https://cdn.jsdelivr.net/fontsource/fonts/roboto-flex:vf@latest/latin-full-normal.woff2) format('woff2-variations');
+    unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
